--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "/Users/jhuangyayi/anaconda3/envs/phirefashion/bin/python"
+    "python.pythonPath": "/Users/jhuangyayi/anaconda3/envs/phirefashion/bin/python",
+    "cSpell.words": [
+        "Inorder",
+        "Postorder",
+        "Rescusion",
+        "preorder"
+    ]
 }
